- 
    
Bug
 - 
    Resolution: Fixed
 - 
    
  Not Evaluated                     
     - 
    Qt Creator 10.0.1
 - 
    Win 11 with a bad configured anti virus, this is important.
 
- 
        
 - 
        29371dc2f (master), 419f5416c (11.0)
 
As written on the mailing list [1], whenever I change the editor there is a delay before I can continue to work, I've nailed it down to the lambda in Git::Internal::GitPluginPrivate::setupInstantBlame(). Approx. one half for GitClient::instance()->getAuthor(workingDirectory.
The other half in Git::Internal::GitPluginPrivate::instantBlame(), as asked I have checked further into the latter. GitClient::instance()->encoding(GitClient::EncodingCommit, workingDirectory);
[1] https://lists.qt-project.org/pipermail/qt-creator/2023-May/009161.html
- is required for
 - 
                    
QTCREATORBUG-19721 Git user interface improvements
-         
 - Reported
 
 -